# Datalog_Interpreter

./: .gitignore  CMakeLists.txt  README.md
source/: AddAutomaton.h  Automaton.h  ColonAutomaton.h  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.h  Graph.cpp  Graph.h  Header.cpp  Header.h  IdAutomaton.cpp  IdAutomaton.h  Interpreter.cpp  Interpreter.h  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultiCommentAutomaton.cpp  MultiCommentAutomaton.h  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.h  Predicate.cpp  Predicate.h  QueriesAutomaton.cpp  QueriesAutomaton.h  QuestionMarkAutomaton.h  Relation.cpp  Relation.h  RightParenAutomaton.h  Rule.cpp  Rule.h  (+10 more)
